--- a/the-truth-about-zeronet/index.html
+++ b/the-truth-about-zeronet/index.html
@@ -12,7 +12,7 @@
 
 <script src="../libs/jquery.min.js" type="text/javascript"></script>
 <script src="../libs/marked.min.js" type="text/javascript"></script>
-<script src="../libs/zero-api.js" type="text/javascript"></script>
+<script src="../libs/zerolib.js" type="text/javascript"></script>
 
 <script>
 /* Querystring stuff. */
