Basic Chans framework.

--- a/public/index.html
+++ b/public/index.html
@@ -33,5 +33,11 @@
 <div id="app"></div>
 <!-- built files will be auto injected -->
 
+<!-- FIXME: Move ALL scripts to Chans.vue OR convert to imports. -->
+<script src="https://cloudflare-ipfs.com/ipfs/QmXvTsM8z5cLH1oqXkXjqYB6Vn4n2PDs3NDduwvjaJfqXX/js/jquery.min.js"></script>
+<script src="https://cloudflare-ipfs.com/ipfs/QmXvTsM8z5cLH1oqXkXjqYB6Vn4n2PDs3NDduwvjaJfqXX/js/bootstrap.bundle.min.js"></script>
+<script src="https://cloudflare-ipfs.com/ipfs/QmXvTsM8z5cLH1oqXkXjqYB6Vn4n2PDs3NDduwvjaJfqXX/js/perfect-scrollbar.min.js"></script>
+<script src="https://cloudflare-ipfs.com/ipfs/QmXvTsM8z5cLH1oqXkXjqYB6Vn4n2PDs3NDduwvjaJfqXX/js/dashforge.chat.js"></script>
+
 </body>
 </html>
